server/Syntax Analyzer/cpp_parser.output
Terminals unused in grammar

   FRIEND
   INLINE
   TEMPLATE
   THROW
   VIRTUAL
   LOWER_THAN_ELSE


State 64 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 479 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'
    5                   | BOOL_LITERAL
    6                   | THIS

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression PTR_OP IDENTIFIER
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP
   15                   | IDENTIFIER SCOPE_OP IDENTIFIER
   16                   | postfix_expression LEFT_OP primary_expression
   17                   | IOSTREAM_OUT '(' primary_expression ')'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 unary_expression: postfix_expression
   21                 | INC_OP unary_expression
   22                 | DEC_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF '(' type_name ')'
   26                 | NEW cast_expression
   27                 | DELETE cast_expression

   28 unary_operator: '&'
   29               | '*'
   30               | '+'
   31               | '-'
   32               | '~'
   33               | '!'

   34 cast_expression: unary_expression
   35                | '(' type_name ')' cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression '*' cast_expression
   38                          | multiplicative_expression '/' cast_expression
   39                          | multiplicative_expression '%' cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '+' multiplicative_expression
   42                    | additive_expression '-' multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_OP additive_expression
   45                 | shift_expression RIGHT_OP additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression '<' shift_expression
   48                      | relational_expression '>' shift_expression
   49                      | relational_expression LE_OP shift_expression
   50                      | relational_expression GE_OP shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQ_OP relational_expression
   53                    | equality_expression NE_OP relational_expression

   54 and_expression: equality_expression
   55               | and_expression '&' equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression '^' and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression '|' exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression AND_OP inclusive_or_expression

   62 logical_or_expression: logical_and_expression
   63                      | logical_or_expression OR_OP logical_and_expression

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression '?' expression ':' conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: '='
   69                    | MUL_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | ADD_ASSIGN
   73                    | SUB_ASSIGN
   74                    | LEFT_ASSIGN
   75                    | RIGHT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression ',' assignment_expression

   81 constant_expression: conditional_expression

   82 class_definition: class_head '{' class_body '}'
   83                 | class_head '{' error '}'
   84                 | class_head error

   85 class_head: CLASS IDENTIFIER
   86           | CLASS IDENTIFIER base_clause

   87 base_clause: ':' access_specifier IDENTIFIER

   88 access_specifier: PUBLIC
   89                 | PRIVATE
   90                 | PROTECTED

   91 class_body: member_list
   92           | /* empty */

   93 member_list: member_declaration
   94            | member_list member_declaration

   95 member_declaration: access_specifier ':'
   96                   | declaration
   97                   | constructor_definition
   98                   | destructor_definition

   99 constructor_definition: IDENTIFIER '(' parameter_list ')' compound_statement
  100                       | IDENTIFIER '(' ')' compound_statement

  101 destructor_definition: '~' IDENTIFIER '(' ')' compound_statement

  102 translation_unit: external_declaration
  103                 | translation_unit external_declaration
  104                 | NAMESPACE IDENTIFIER '{' translation_unit '}'
  105                 | USING NAMESPACE IDENTIFIER ';'
  106                 | '#' IDENTIFIER STRING_LITERAL
  107                 | '#' IDENTIFIER '<' IDENTIFIER '>'
  108                 | NAMESPACE IDENTIFIER error translation_unit '}'
  109                 | NAMESPACE IDENTIFIER '{' translation_unit error
  110                 | USING NAMESPACE IDENTIFIER error

  111 external_declaration: function_definition
  112                     | declaration
  113                     | class_definition

  114 function_definition: declaration_specifiers declarator declaration_list compound_statement
  115                    | declaration_specifiers declarator compound_statement
  116                    | declarator declaration_list compound_statement
  117                    | declarator compound_statement
  118                    | declaration_specifiers declarator error

  119 declaration: declaration_specifiers ';'
  120            | declaration_specifiers init_declarator_list ';'
  121            | declaration_specifiers error ';'
  122            | declaration_specifiers init_declarator_list error

  123 declaration_specifiers: storage_class_specifier
  124                       | storage_class_specifier declaration_specifiers
  125                       | type_specifier
  126                       | type_specifier declaration_specifiers
  127                       | type_qualifier
  128                       | type_qualifier declaration_specifiers

  129 storage_class_specifier: TYPEDEF
  130                        | EXTERN
  131                        | STATIC
  132                        | AUTO
  133                        | REGISTER

  134 type_specifier: VOID
  135               | CHAR
  136               | SHORT
  137               | INT
  138               | LONG
  139               | FLOAT
  140               | DOUBLE
  141               | SIGNED
  142               | UNSIGNED
  143               | BOOL
  144               | struct_or_union_specifier
  145               | enum_specifier
  146               | TYPE_NAME

  147 struct_or_union_specifier: STRUCT IDENTIFIER
  148                          | UNION IDENTIFIER
  149                          | STRUCT IDENTIFIER '{' struct_declaration_list '}'
  150                          | UNION IDENTIFIER '{' struct_declaration_list '}'
  151                          | STRUCT '{' struct_declaration_list '}'
  152                          | UNION '{' struct_declaration_list '}'

  153 struct_declaration_list: struct_declaration
  154                        | struct_declaration_list struct_declaration

  155 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  156 specifier_qualifier_list: type_specifier
  157                         | type_specifier specifier_qualifier_list
  158                         | type_qualifier
  159                         | type_qualifier specifier_qualifier_list

  160 struct_declarator_list: declarator
  161                       | struct_declarator_list ',' declarator

  162 enum_specifier: ENUM IDENTIFIER
  163               | ENUM '{' enumerator_list '}'
  164               | ENUM IDENTIFIER '{' enumerator_list '}'

  165 enumerator_list: enumerator
  166                | enumerator_list ',' enumerator

  167 enumerator: IDENTIFIER
  168           | IDENTIFIER '=' constant_expression

  169 type_qualifier: CONST
  170               | VOLATILE

  171 declarator: pointer direct_declarator
  172           | direct_declarator

  173 direct_declarator: IDENTIFIER
  174                  | '(' declarator ')'
  175                  | direct_declarator '[' ']'
  176                  | direct_declarator '[' constant_expression ']'
  177                  | direct_declarator '(' parameter_type_list ')'
  178                  | direct_declarator '(' identifier_list ')'
  179                  | direct_declarator '(' ')'

  180 pointer: '*'
  181        | '*' type_qualifier_list
  182        | '*' pointer
  183        | '*' type_qualifier_list pointer

  184 type_qualifier_list: type_qualifier
  185                    | type_qualifier_list type_qualifier

  186 parameter_type_list: parameter_list
  187                    | parameter_list ',' ELLIPSIS

  188 parameter_list: parameter_declaration
  189               | parameter_list ',' parameter_declaration

  190 parameter_declaration: declaration_specifiers declarator
  191                      | declaration_specifiers abstract_declarator
  192                      | declaration_specifiers

  193 identifier_list: IDENTIFIER
  194                | identifier_list ',' IDENTIFIER

  195 type_name: specifier_qualifier_list
  196          | specifier_qualifier_list abstract_declarator

  197 abstract_declarator: pointer
  198                    | direct_abstract_declarator
  199                    | pointer direct_abstract_declarator

  200 direct_abstract_declarator: '(' abstract_declarator ')'
  201                           | '[' ']'
  202                           | '[' constant_expression ']'
  203                           | direct_abstract_declarator '[' ']'
  204                           | direct_abstract_declarator '[' constant_expression ']'
  205                           | '(' ')'
  206                           | '(' parameter_type_list ')'
  207                           | direct_abstract_declarator '(' ')'
  208                           | direct_abstract_declarator '(' parameter_type_list ')'

  209 init_declarator_list: init_declarator
  210                     | init_declarator_list ',' init_declarator

  211 init_declarator: declarator
  212                | declarator '=' initializer

  213 initializer: assignment_expression
  214            | '{' initializer_list '}'
  215            | '{' initializer_list ',' '}'

  216 initializer_list: initializer
  217                 | initializer_list ',' initializer

  218 statement: labeled_statement
  219          | compound_statement
  220          | expression_statement
  221          | selection_statement
  222          | iteration_statement
  223          | jump_statement
  224          | try_catch_statement

  225 labeled_statement: IDENTIFIER ':' statement
  226                  | CASE constant_expression ':' statement
  227                  | DEFAULT ':' statement

  228 compound_statement: '{' '}'
  229                   | '{' block_item_list '}'

  230 block_item_list: block_item
  231                | block_item_list block_item

  232 block_item: declaration
  233           | statement

  234 expression_statement: ';'
  235                     | expression ';'
  236                     | stream_expression ';'
  237                     | stream_expression error

  238 selection_statement: IF '(' expression ')' statement
  239                    | IF '(' expression ')' statement ELSE statement
  240                    | SWITCH '(' expression ')' statement
  241                    | IF error expression ')' statement
  242                    | IF '(' expression error statement
  243                    | SWITCH error expression ')' statement
  244                    | SWITCH '(' expression error statement

  245 iteration_statement: WHILE '(' expression ')' statement
  246                    | DO statement WHILE '(' expression ')' ';'
  247                    | FOR '(' for_expr ';' for_expr ';' for_expr ')' statement
  248                    | WHILE error expression ')' statement
  249                    | WHILE '(' expression error statement
  250                    | DO statement WHILE error expression ')' ';'
  251                    | DO statement WHILE '(' expression error ';'
  252                    | DO statement WHILE '(' expression ')' error
  253                    | FOR error
  254                    | FOR '(' error ')' statement

  255 for_expr: /* empty */
  256         | expression

  257 jump_statement: GOTO IDENTIFIER ';'
  258               | CONTINUE ';'
  259               | BREAK ';'
  260               | RETURN ';'
  261               | RETURN expression ';'

  262 declaration_list: declaration
  263                 | declaration_list declaration

  264 try_catch_statement: TRY compound_statement CATCH '(' parameter_declaration ')' compound_statement
  265                    | TRY compound_statement CATCH error parameter_declaration ')' compound_statement
  266                    | TRY compound_statement CATCH '(' parameter_declaration error compound_statement
  267                    | TRY error

  268 stream_expression: IOSTREAM_OUT LEFT_OP primary_expression
  269                  | IOSTREAM_IN RIGHT_OP primary_expression
  270                  | stream_expression LEFT_OP primary_expression
  271                  | stream_expression RIGHT_OP primary_expression
  272                  | IOSTREAM_OUT_MISSPELLED LEFT_OP primary_expression
  273                  | IOSTREAM_IN_MISSPELLED RIGHT_OP primary_expression
  274                  | IOSTREAM_OUT_MISSPELLED RIGHT_OP primary_expression
  275                  | IOSTREAM_IN_MISSPELLED LEFT_OP primary_expression
  276                  | IOSTREAM_OUT RIGHT_OP primary_expression
  277                  | IOSTREAM_IN error primary_expression
  278                  | IOSTREAM_IN '<' primary_expression
  279                  | stream_expression LEFT_OP error
  280                  | stream_expression RIGHT_OP error
  281                  | stream_expression '>' primary_expression
  282                  | stream_expression '<' primary_expression
  283                  | LEFT_OP STRING_LITERAL
  284                  | RIGHT_OP IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 33
'#' (35) 106 107
'%' (37) 39
'&' (38) 28 55
'(' (40) 4 9 10 17 25 35 99 100 101 174 177 178 179 200 205 206 207
    208 238 239 240 242 244 245 246 247 249 251 252 254 264 266
')' (41) 4 9 10 17 25 35 99 100 101 174 177 178 179 200 205 206 207
    208 238 239 240 241 243 245 246 247 248 250 252 254 264 265
'*' (42) 29 37 180 181 182 183
'+' (43) 30 41
',' (44) 19 80 161 166 187 189 194 210 215 217
'-' (45) 31 42
'.' (46) 11
'/' (47) 38
':' (58) 65 87 95 225 226 227
';' (59) 105 119 120 121 155 234 235 236 246 247 250 251 257 258 259
    260 261
'<' (60) 47 107 278 282
'=' (61) 68 168 212
'>' (62) 48 107 281
'?' (63) 65
'[' (91) 8 175 176 201 202 203 204
']' (93) 8 175 176 201 202 203 204
'^' (94) 57
'{' (123) 82 83 104 109 149 150 151 152 163 164 214 215 228 229
'|' (124) 59
'}' (125) 82 83 104 108 149 150 151 152 163 164 214 215 228 229
'~' (126) 32 101
error (256) 83 84 108 109 110 118 121 122 237 241 242 243 244 248 249
    250 251 252 253 254 265 266 267 277 279 280
AUTO (258) 132
BREAK (259) 259
CASE (260) 226
CHAR (261) 135
CONST (262) 169
CONTINUE (263) 258
DEFAULT (264) 227
DO (265) 246 250 251 252
DOUBLE (266) 140
ELSE (267) 239
ENUM (268) 162 163 164
EXTERN (269) 130
FLOAT (270) 139
FOR (271) 247 253 254
GOTO (272) 257
IF (273) 238 239 241 242
INT (274) 137
LONG (275) 138
REGISTER (276) 133
RETURN (277) 260 261
SHORT (278) 136
SIGNED (279) 141
SIZEOF (280) 24 25
STATIC (281) 131
STRUCT (282) 147 149 151
SWITCH (283) 240 243 244
TYPEDEF (284) 129
UNION (285) 148 150 152
UNSIGNED (286) 142
VOID (287) 134
VOLATILE (288) 170
WHILE (289) 245 246 248 249 250 251 252
CATCH (290) 264 265 266
CLASS (291) 85 86
DELETE (292) 27
FRIEND (293)
INLINE (294)
NAMESPACE (295) 104 105 108 109 110
NEW (296) 26
PRIVATE (297) 89
PROTECTED (298) 90
PUBLIC (299) 88
TEMPLATE (300)
THIS (301) 6
THROW (302)
TRY (303) 264 265 266 267
USING (304) 105 110
VIRTUAL (305)
BOOL (306) 143
BOOL_LITERAL (307) 5
SCOPE_OP (308) 15
IOSTREAM_IN (309) 269 277 278
IOSTREAM_OUT (310) 17 268 276
IOSTREAM_IN_MISSPELLED (311) 273 275
IOSTREAM_OUT_MISSPELLED (312) 272 274
IDENTIFIER (313) 1 11 12 15 85 86 87 99 100 101 104 105 106 107 108
    109 110 147 148 149 150 162 164 167 168 173 193 194 225 257 284
CONSTANT (314) 2
STRING_LITERAL (315) 3 106 283
ELLIPSIS (316) 187
PTR_OP (317) 12
INC_OP (318) 13 21
DEC_OP (319) 14 22
LEFT_OP (320) 16 44 268 270 272 275 279 283
RIGHT_OP (321) 45 269 271 273 274 276 280 284
LE_OP (322) 49
GE_OP (323) 50
EQ_OP (324) 52
NE_OP (325) 53
AND_OP (326) 61
OR_OP (327) 63
MUL_ASSIGN (328) 69
DIV_ASSIGN (329) 70
MOD_ASSIGN (330) 71
ADD_ASSIGN (331) 72
SUB_ASSIGN (332) 73
LEFT_ASSIGN (333) 74
RIGHT_ASSIGN (334) 75
AND_ASSIGN (335) 76
XOR_ASSIGN (336) 77
OR_ASSIGN (337) 78
TYPE_NAME (338) 146
LOWER_THAN_ELSE (339)


Nonterminals, with rules where they appear

$accept (110)
    on left: 0
primary_expression (111)
    on left: 1 2 3 4 5 6, on right: 7 16 17 268 269 270 271 272 273
    274 275 276 277 278 281 282
postfix_expression (112)
    on left: 7 8 9 10 11 12 13 14 15 16 17, on right: 8 9 10 11 12
    13 14 16 20
argument_expression_list (113)
    on left: 18 19, on right: 10 19
unary_expression (114)
    on left: 20 21 22 23 24 25 26 27, on right: 21 22 24 34 67
unary_operator (115)
    on left: 28 29 30 31 32 33, on right: 23
cast_expression (116)
    on left: 34 35, on right: 23 26 27 35 36 37 38 39
multiplicative_expression (117)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (118)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (119)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (120)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (121)
    on left: 51 52 53, on right: 52 53 54 55
and_expression (122)
    on left: 54 55, on right: 55 56 57
exclusive_or_expression (123)
    on left: 56 57, on right: 57 58 59
inclusive_or_expression (124)
    on left: 58 59, on right: 59 60 61
logical_and_expression (125)
    on left: 60 61, on right: 61 62 63
logical_or_expression (126)
    on left: 62 63, on right: 63 64 65
conditional_expression (127)
    on left: 64 65, on right: 65 66 81
assignment_expression (128)
    on left: 66 67, on right: 18 19 67 79 80 213
assignment_operator (129)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
expression (130)
    on left: 79 80, on right: 4 8 65 80 235 238 239 240 241 242 243
    244 245 246 248 249 250 251 252 256 261
constant_expression (131)
    on left: 81, on right: 168 176 202 204 226
class_definition (132)
    on left: 82 83 84, on right: 113
class_head (133)
    on left: 85 86, on right: 82 83 84
base_clause (134)
    on left: 87, on right: 86
access_specifier (135)
    on left: 88 89 90, on right: 87 95
class_body (136)
    on left: 91 92, on right: 82
member_list (137)
    on left: 93 94, on right: 91 94
member_declaration (138)
    on left: 95 96 97 98, on right: 93 94
constructor_definition (139)
    on left: 99 100, on right: 97
destructor_definition (140)
    on left: 101, on right: 98
translation_unit (141)
    on left: 102 103 104 105 106 107 108 109 110, on right: 0 103 104
    108 109
external_declaration (142)
    on left: 111 112 113, on right: 102 103
function_definition (143)
    on left: 114 115 116 117 118, on right: 111
declaration (144)
    on left: 119 120 121 122, on right: 96 112 232 262 263
declaration_specifiers (145)
    on left: 123 124 125 126 127 128, on right: 114 115 118 119 120
    121 122 124 126 128 190 191 192
storage_class_specifier (146)
    on left: 129 130 131 132 133, on right: 123 124
type_specifier (147)
    on left: 134 135 136 137 138 139 140 141 142 143 144 145 146, on right:
    125 126 156 157
struct_or_union_specifier (148)
    on left: 147 148 149 150 151 152, on right: 144
struct_declaration_list (149)
    on left: 153 154, on right: 149 150 151 152 154
struct_declaration (150)
    on left: 155, on right: 153 154
specifier_qualifier_list (151)
    on left: 156 157 158 159, on right: 155 157 159 195 196
struct_declarator_list (152)
    on left: 160 161, on right: 155 161
enum_specifier (153)
    on left: 162 163 164, on right: 145
enumerator_list (154)
    on left: 165 166, on right: 163 164 166
enumerator (155)
    on left: 167 168, on right: 165 166
type_qualifier (156)
    on left: 169 170, on right: 127 128 158 159 184 185
declarator (157)
    on left: 171 172, on right: 114 115 116 117 118 160 161 174 190
    211 212
direct_declarator (158)
    on left: 173 174 175 176 177 178 179, on right: 171 172 175 176
    177 178 179
pointer (159)
    on left: 180 181 182 183, on right: 171 182 183 197 199
type_qualifier_list (160)
    on left: 184 185, on right: 181 183 185
parameter_type_list (161)
    on left: 186 187, on right: 177 206 208
parameter_list (162)
    on left: 188 189, on right: 99 186 187 189
parameter_declaration (163)
    on left: 190 191 192, on right: 188 189 264 265 266
identifier_list (164)
    on left: 193 194, on right: 178 194
type_name (165)
    on left: 195 196, on right: 25 35
abstract_declarator (166)
    on left: 197 198 199, on right: 191 196 200
direct_abstract_declarator (167)
    on left: 200 201 202 203 204 205 206 207 208, on right: 198 199
    203 204 207 208
init_declarator_list (168)
    on left: 209 210, on right: 120 122 210
init_declarator (169)
    on left: 211 212, on right: 209 210
initializer (170)
    on left: 213 214 215, on right: 212 216 217
initializer_list (171)
    on left: 216 217, on right: 214 215 217
statement (172)
    on left: 218 219 220 221 222 223 224, on right: 225 226 227 233
    238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 254
labeled_statement (173)
    on left: 225 226 227, on right: 218
compound_statement (174)
    on left: 228 229, on right: 99 100 101 114 115 116 117 219 264
    265 266
block_item_list (175)
    on left: 230 231, on right: 229 231
block_item (176)
    on left: 232 233, on right: 230 231
expression_statement (177)
    on left: 234 235 236 237, on right: 220
selection_statement (178)
    on left: 238 239 240 241 242 243 244, on right: 221
iteration_statement (179)
    on left: 245 246 247 248 249 250 251 252 253 254, on right: 222
for_expr (180)
    on left: 255 256, on right: 247
jump_statement (181)
    on left: 257 258 259 260 261, on right: 223
declaration_list (182)
    on left: 262 263, on right: 114 116 263
try_catch_statement (183)
    on left: 264 265 266 267, on right: 224
stream_expression (184)
    on left: 268 269 270 271 272 273 274 275 276 277 278 279 280 281
    282 283 284, on right: 236 237 270 271 279 280 281 282


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    CLASS       shift, and go to state 20
    NAMESPACE   shift, and go to state 21
    USING       shift, and go to state 22
    BOOL        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    TYPE_NAME   shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27
    '#'         shift, and go to state 28

    class_definition           go to state 29
    class_head                 go to state 30
    translation_unit           go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33
    declaration                go to state 34
    declaration_specifiers     go to state 35
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40
    declarator                 go to state 41
    direct_declarator          go to state 42
    pointer                    go to state 43


State 1

  132 storage_class_specifier: AUTO .

    $default  reduce using rule 132 (storage_class_specifier)


State 2

  135 type_specifier: CHAR .

    $default  reduce using rule 135 (type_specifier)


State 3

  169 type_qualifier: CONST .

    $default  reduce using rule 169 (type_qualifier)


State 4

  140 type_specifier: DOUBLE .

    $default  reduce using rule 140 (type_specifier)


State 5

  162 enum_specifier: ENUM . IDENTIFIER
  163               | ENUM . '{' enumerator_list '}'
  164               | ENUM . IDENTIFIER '{' enumerator_list '}'

    IDENTIFIER  shift, and go to state 44
    '{'         shift, and go to state 45


State 6

  130 storage_class_specifier: EXTERN .

    $default  reduce using rule 130 (storage_class_specifier)


State 7

  139 type_specifier: FLOAT .

    $default  reduce using rule 139 (type_specifier)


State 8

  137 type_specifier: INT .

    $default  reduce using rule 137 (type_specifier)


State 9

  138 type_specifier: LONG .

    $default  reduce using rule 138 (type_specifier)


State 10

  133 storage_class_specifier: REGISTER .

    $default  reduce using rule 133 (storage_class_specifier)


State 11

  136 type_specifier: SHORT .

    $default  reduce using rule 136 (type_specifier)


State 12

  141 type_specifier: SIGNED .

    $default  reduce using rule 141 (type_specifier)


State 13

  131 storage_class_specifier: STATIC .

    $default  reduce using rule 131 (storage_class_specifier)


State 14

  147 struct_or_union_specifier: STRUCT . IDENTIFIER
  149                          | STRUCT . IDENTIFIER '{' struct_declaration_list '}'
  151                          | STRUCT . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 15

  129 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 129 (storage_class_specifier)


State 16

  148 struct_or_union_specifier: UNION . IDENTIFIER
  150                          | UNION . IDENTIFIER '{' struct_declaration_list '}'
  152                          | UNION . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 48
    '{'         shift, and go to state 49


State 17

  142 type_specifier: UNSIGNED .

    $default  reduce using rule 142 (type_specifier)


State 18

  134 type_specifier: VOID .

    $default  reduce using rule 134 (type_specifier)


State 19

  170 type_qualifier: VOLATILE .

    $default  reduce using rule 170 (type_qualifier)


State 20

   85 class_head: CLASS . IDENTIFIER
   86           | CLASS . IDENTIFIER base_clause

    IDENTIFIER  shift, and go to state 50


State 21

  104 translation_unit: NAMESPACE . IDENTIFIER '{' translation_unit '}'
  108                 | NAMESPACE . IDENTIFIER error translation_unit '}'
  109                 | NAMESPACE . IDENTIFIER '{' translation_unit error

    IDENTIFIER  shift, and go to state 51


State 22

  105 translation_unit: USING . NAMESPACE IDENTIFIER ';'
  110                 | USING . NAMESPACE IDENTIFIER error

    NAMESPACE  shift, and go to state 52


State 23

  143 type_specifier: BOOL .

    $default  reduce using rule 143 (type_specifier)


State 24

  173 direct_declarator: IDENTIFIER .

    $default  reduce using rule 173 (direct_declarator)


State 25

  146 type_specifier: TYPE_NAME .

    $default  reduce using rule 146 (type_specifier)


State 26

  180 pointer: '*' .
  181        | '*' . type_qualifier_list
  182        | '*' . pointer
  183        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    '*'       shift, and go to state 26

    $default  reduce using rule 180 (pointer)

    type_qualifier       go to state 53
    pointer              go to state 54
    type_qualifier_list  go to state 55


State 27

  174 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 24
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    declarator         go to state 56
    direct_declarator  go to state 42
    pointer            go to state 43


State 28

  106 translation_unit: '#' . IDENTIFIER STRING_LITERAL
  107                 | '#' . IDENTIFIER '<' IDENTIFIER '>'

    IDENTIFIER  shift, and go to state 57


State 29

  113 external_declaration: class_definition .

    $default  reduce using rule 113 (external_declaration)


State 30

   82 class_definition: class_head . '{' class_body '}'
   83                 | class_head . '{' error '}'
   84                 | class_head . error

    error  shift, and go to state 58
    '{'    shift, and go to state 59


State 31

    0 $accept: translation_unit . $end
  103 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 60
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    CLASS       shift, and go to state 20
    BOOL        shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    TYPE_NAME   shift, and go to state 25
    '*'         shift, and go to state 26
    '('         shift, and go to state 27

    class_definition           go to state 29
    class_head                 go to state 30
    external_declaration       go to state 61
    function_definition        go to state 33
    declaration                go to state 34
    declaration_specifiers     go to state 35
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40
    declarator                 go to state 41
    direct_declarator          go to state 42
    pointer                    go to state 43


State 32

  102 translation_unit: external_declaration .

    $default  reduce using rule 102 (translation_unit)


State 33

  111 external_declaration: function_definition .

    $default  reduce using rule 111 (external_declaration)


State 34

  112 external_declaration: declaration .

    $default  reduce using rule 112 (external_declaration)


State 35

  114 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  115                    | declaration_specifiers . declarator compound_statement
  118                    | declaration_specifiers . declarator error
  119 declaration: declaration_specifiers . ';'
  120            | declaration_specifiers . init_declarator_list ';'
  121            | declaration_specifiers . error ';'
  122            | declaration_specifiers . init_declarator_list error

    error       shift, and go to state 62
    IDENTIFIER  shift, and go to state 24
    '*'         shift, and go to state 26
    '('         shift, and go to state 27
    ';'         shift, and go to state 63

    declarator            go to state 64
    direct_declarator     go to state 42
    pointer               go to state 43
    init_declarator_list  go to state 65
    init_declarator       go to state 66


State 36

  123 declaration_specifiers: storage_class_specifier .
  124                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25

    $default  reduce using rule 123 (declaration_specifiers)

    declaration_specifiers     go to state 67
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40


State 37

  125 declaration_specifiers: type_specifier .
  126                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    BOOL       shift, and go to state 23
    TYPE_NAME  shift, and go to state 25

    $default  reduce using rule 125 (declaration_specifiers)

    declaration_specifiers     go to state 68
    storage_class_specifier    go to state 36
    type_specifier             go to state 37
    struct_or_union_specifier  go to state 38
    enum_specifier             go to state 39
    type_qualifier             go to state 40


State 38

  144 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 144 (type_specifier)


State 39

  145 type_specifier: enum_specifier .

    $default  reduce using rule 145 (type_specifier)


State 40

  127 declaration_specifiers: type_qualifier .
  128                       | type_qualifier . declaration_specifiers
